[project]
name = "stressnet"
version = "0.1.0"
description = "Fine-tuning CNN for Mechanical Stress Prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.7",
    "openpyxl>=3.1.5",
    "pandas==2.3.3",
    "plotly>=6.7.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
]
